src/components/gallery/gallery.scss
.atomikui-gallery {
  box-sizing: content-box;
  display: flex;
  flex-wrap: wrap;

  & > .is-featured {
    height: rem(300);
    min-width: 100%;
  }

  & > * {
    background: $blue-gray-100;
    border: 1px solid white;
    cursor: pointer;
    flex: 33.333% 0 0;
    height: rem(100);
  }

  @media (min-width: $breakpoint-medium) {
    & > * {
      flex: 25% 0 0;
    }
  }
}

.atomikui-gallery-modal {
  flex-direction: column;

  &__dialog {
    background: $white;
    display: flex;
    flex-direction: column;
    max-height: 90%;
    max-width: 90%;
    padding: rem(10);
    position: relative;

    @media (min-width: $breakpoint-medium) {
      width: 65%;
    }
  }

  &__header {
    align-items: center;
    display: flex;
    font-size: rem(18);
    font-weight: $font-medium;
    justify-content: space-between;
    padding-bottom: rem(8);

    & > button {
      align-items: center;
      border-radius: 0;
      display: flex;
      height: rem(34);
      margin-left: rem(16);
      justify-content: center;
      width: rem(34);
    }
  }

  &__body {
    flex: 1;
    overflow: auto;

    & > * {
      width: 100%;
    }

    & > img {
      display: block;
      width: 100%;
    }
  }
}

